# FlyBird

./: .gitignore  CMakeLists.txt  FlyBird.cpp  LICENSE.txt  just.sh
assets/: Flama-20260129-153549.piskel  Nau.piskel
